--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -17,7 +17,7 @@
     {% if page.image.feature %}<img src="{{ site.url }}/images/{{ page.image.feature }}" class="entry-feature-image" alt="{{ page.title }}" {% if site.logo == null %}style="margin-top:0;"{% endif %}>{% endif %}
     <div class="entry-wrapper" style="margin-top: 20px">
       <footer class="entry-meta">
-        <img src="{{ site.url }}/images/bio-photo.png" alt="{{ site.owner.displayName }} photo" class="author-photo"/>
+        <img src="{{ site.url }}/images/{{ page.image.avatar}}" alt="{{ site.owner.displayName }} photo" class="author-photo"/>
       </footer>
       <div class="entry-content">
         {{ content }}
