--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -14,7 +14,7 @@
 <div id="main" role="main">
 
   <article class="entry">
-    {% if page.image.feature %}<img src="{{ site.url }}/images/{{ page.image.feature }}" class="entry-feature-image" alt="{{ page.title }}" {% if site.logo == null %}style="margin-top:0;"{% endif %}>{% endif %}
+    {% if page.image.feature %}<img src="{{ site.url }}/images/{{ page.image.feature }}" class="entry-feature-image" alt="{{ page.title }}" {% if site.logo == null %}style="margin-top:0;"{% endif %}>{% if page.image.credit %}<p class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a>{% endif %}{% endif %}
     <div class="entry-wrapper" style="margin-top: 20px">
       <footer class="entry-meta">
         <img src="{{ site.url }}/images/{{ page.image.avatar}}" alt="{{ site.owner.displayName }} photo" class="author-photo"/>
